rpi5/calibre/booklore/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb
  template:
    metadata:
      name: mariadb
      labels:
        app: mariadb
    spec:
      containers:
        - name: booklore
          image: lscr.io/linuxserver/mariadb:11.4.8@sha256:73a403f999eb7317b0fcd084f42bd77ed813f4e09d2a4ebc1ba90ea48e43041a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: data
          readinessProbe:
            exec:
              command:
                - "mariadb-admin"
                - "ping"
                - "-h"
                - "localhost"
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
      restartPolicy: Always
      securityContext:
        fsGroup: 10001
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
