rpi5/calibre/booklore/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: booklore
  labels:
    app: booklore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booklore
  serviceName: booklore
  template:
    metadata:
      name: booklore
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: booklore
    spec:
      containers:
        - name: booklore
          image: ghcr.io/booklore-app/booklore:v2.2.1@sha256:252586c469ff6d07a06469fd1d49f19af932f4d323713d253c5d29e33b6ec97a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6060
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /books
              name: books
            - mountPath: /bookdrop
              name: ingest
          readinessProbe:
            httpGet:
              port: 6060
              path: /
          livenessProbe:
            tcpSocket:
              port: 6060
            initialDelaySeconds: 30
      restartPolicy: Always
      securityContext:
        fsGroup: 3002
      volumes:
        - name: books
          hostPath:
            path: "/data/Books"
        - name: ingest
          hostPath:
            path: "/data/BookImport/booklore"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
