rpi5/calibre/booklore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore
spec:
  selector:
    app: booklore
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
